# razr-fold-2026-kernel-build

./: .gitignore  CONTINUE-HERE.md  README.md  REPLICATE-LINDROID-GPU.md
configs/: lindroid_gki.fragment
docs/: FLASH-AND-BOOTLOOP.md  LINDROID.md  SOURCES.md
lindroid/evdi/: Kconfig  Makefile  PINNED_COMMIT.txt  evdi_connector.c  evdi_drv.h  evdi_event.c  evdi_fb.c  evdi_gem.c  evdi_ioctl.c  evdi_lindroid_drv.c  evdi_modeset.c  evdi_sysfs.c
lindroid/evdi/uapi/: evdi_drm.h
manifests/: moto-canoe.xml
overlays/: qcom-dtc-BUILD.bazel
scripts/: bootstrap.sh  build.sh  mac-build.sh
